# tezos-baking-platform

./: .gitignore  .gitmodules  LICENSE  README.md  UsingTezos.md  default.nix  nixpkgs.nix  opam2nix-packages.nix  release.nix  release.sh  tezos.nixpam  tezos.spec
install-nix/: README.md
ledger/: BUILDING.md  README.md  TESTING.md  address.sh  authorize.sh  bolos-env.nix  build.nix  build.sh  build_both.sh  fhs.nix  install-nix.sh  install.sh  ledger-blue-shell.nix  reset.sh  sandbox-init.sh  sandbox-tests.sh  setup_ledger.sh  sign.sh
ledger/ledger-app/: default.json  fetch.nix
ledger/nanos-secure-sdk/: bump.sh  default.json
nix/: bigstring.nix  bubble-warp.patch  cstruct.nix  fauxpam.nix  fauxpam.sh  nixpkgs.nix  opam.nix  opam.nix.pl  opam2.nix  re.nix  tezos.nix
nix/ocaml/afl-persistent/: default.nix
nix/ocaml/alcotest-lwt/: default.nix
nix/tezos/: build-box.nix  default.nix  kit.nix  opam-box.nix  sandbox-env.nix  sandbox.nix
obsidian-scripts/: README  README.md  jimmy-sandbox-setup.sh  jimmy-sandbox.sh  jimmy-works-inner.sh  jimmy-works.sh  ledger-tests.sh  monitored-bakers.sh  sandbox.nix  theworks-more.sh  zeronet-node.sh
obsidian-scripts/ledger/: build.sh  install.sh  sign.sh
opam2nix/: default.json
patches/: dune-libdir.patch  ppx_deriving.opam
scripts/: README.md  commits2pins.sh  fast-baking-sandbox.sh  ledger-start.sh  ledger-tests.sh  sandbox-nodes.sh
tezos-bake-monitor/: default.json
tezos/alphanet/: git.json
tezos/betanet/: git.json
tezos/mainnet/: git.json
tezos/master/: git.json
tezos/zeronet/: git.json
(+237 files in other folders)
