opam-version: "2.0"
name: "ppx_deriving"
version: "4.2.1"
synopsis: "Type-driven code generation for OCaml >=4.02"
description: """
ppx_deriving provides common infrastructure for generating
code based on type definitions, and a set of useful plugins
for common tasks."""
maintainer: "whitequark <whitequark@whitequark.org>"
authors: "whitequark <whitequark@whitequark.org>"
license: "MIT"
tags: "syntax"
homepage: "https://github.com/whitequark/ppx_deriving"
doc: "https://whitequark.github.io/ppx_deriving"
bug-reports: "https://github.com/whitequark/ppx_deriving/issues"
depends: [
  "ocaml" {>= "4.02.1"}
  "ocamlbuild" {build}
  "ocamlfind" {build & >= "1.6.0"}
  "cppo" {build}
  "cppo_ocamlbuild" {build}
  "ocaml-migrate-parsetree"
  "ppx_derivers"
  "ppx_tools" {>= "4.02.3"}
  "result"
  "ounit" {with-test}
]
available: opam-version >= "1.2"
build: [
  ["sh" "pkg/subst.sh" "%{version}%"]
  [
    "ocaml"
    "pkg/build.ml"
    "native=%{ocaml:native-dynlink}%"
    "native-dynlink=%{ocaml:native-dynlink}%"
  ]
  [
    "ocamlbuild"
    "-classic-display"
    "-use-ocamlfind"
    "src_test/test_ppx_deriving.byte"
    "--"
  ] {with-test}
  [make "doc"] {with-doc}
]
dev-repo: "git+https://github.com/whitequark/ppx_deriving.git"
url {
  src:
    "https://gitlab.com/api/v4/projects/smondet%2Fppx_deriving/repository/archive.tar.gz?sha=e0584dd0284f68bede53ad6405a3911e83f1695c"
  checksum: [
    "md5=13fd1b8982903ab50e754466065c0f1d"
  ]
}
